src/objects/Release__c.object
<CustomObject>
    <description>PMO: Release/Phase Management. Track High Level Overview for each phases</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirmation by the Delivery Manager that a key deliverable has been completed</description>
        <inlineHelpText>Confirmed by the SFDC Delivery Manager</inlineHelpText>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Impact</description>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Justification</description>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Deliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a key deliverable milestone</description>
        <inlineHelpText>Is this milestone a key deliverable in the project (i.e. a formal signoff is required by the Client)?</inlineHelpText>
        <label>Key Deliverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress_Flag__c</fullName>
        <formula>IMAGE(CASE( Progress__c ,
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), &quot;cust sat indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <referenceTo>Project_Overview__c</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_Documentation__c</fullName>
        <label>Ready for Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_Implementation__c</fullName>
        <label>Ready for Implementation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Note__c</fullName>
        <label>Release Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Status__c</fullName>
        <formula>IMAGE(CASE(Status__c , 
&quot;Planning&quot;, &quot;/img/samples/stars_100.gif&quot;, 
&quot;Development&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;UAT&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Deployed&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Release Status Icon&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Scope</description>
        <label>Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iteration #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll-Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Target Date</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Start_Date__c</fullName>
        <label>Test Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>Urgency</description>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Phase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Target_Date__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>